# model-loader

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  build.bat  imgui.ini  rebuild.bat
.cache/clangd/index/: Camera.cpp.D6BC17A822AADBDE.idx  Camera.h.B6BC0A51E3980308.idx  Importer.hpp.EDD652E8312E5C4A.idx  MathFunctions.h.C9EB1B61D45DD1FF.idx  Mesh.cpp.43696CF9B4D666B5.idx  Mesh.h.84128A299D3C9510.idx  Model.cpp.8A848215A9997D71.idx  Model.h.DAF8AD9EB2C6AC5D.idx  Shader.h.D2602CFCD24146B7.idx  _fixes.hpp.8625E50B1E1C4437.idx  _vectorize.hpp.1D45E688BF03CFA0.idx  aabb.h.F75EB22F2025BA78.idx  anim.h.2005E8F1CAACF032.idx  camera.h.E173A6751338E9DF.idx  color4.h.7F831937EF80F809.idx  color4.inl.8F75AA070D5FF9CF.idx  common.hpp.B339802C5F06CF87.idx  compute_common.hpp.267C9198ED057C57.idx  compute_vector_decl.hpp.5A314924C8414B60.idx  compute_vector_relational.hpp.80B649C6B7FB7EFC.idx  config.h.1482219D518AEE9E.idx  constants.hpp.0F2EE356556845B2.idx  constants.inl.6AABA974941510B0.idx  defs.h.03867FA958E72247.idx  epsilon.hpp.564A559EE56BB608.idx  epsilon.inl.0A2FB187A96877D2.idx  exponential.hpp.275C9677FADC92DF.idx  func_common.inl.87F3DFE7345260A9.idx  func_exponential.inl.DB32DD3F93938595.idx  func_geometric.inl.481DBF7764574288.idx  func_integer.inl.5CEC841DC1F2CD47.idx  func_matrix.inl.6ED9DD605FC5E427.idx  func_packing.inl.0A1F0BA34BBF7E23.idx  func_trigonometric.inl.379CF2A4C8E778A4.idx  func_vector_relational.inl.FD96764E02E060D8.idx  fwd.hpp.CE3977B3F931AD30.idx  geometric.hpp.DCF915DE47848E4B.idx  glad.c.CAB23D98B9273EC0.idx  glad.h.C5719FD1F815A448.idx  glfw3.h.72589046F064F6D7.idx  (+202 more)
.github/workflows/: build.yml
Editor/src/: EditorLayer.cpp  EditorLayer.h
Engine/include/assimp/: revision.h  types.h
Engine/include/glad/: glad.h
Engine/include/glm/: glm.hpp  integer.hpp  matrix.hpp
Engine/include/glm/ext/: quaternion_trigonometric.hpp  vector_common.hpp  vector_integer.hpp  vector_packing.hpp  vector_reciprocal.hpp  vector_relational.hpp  vector_ulp.hpp
Engine/include/glm/gtx/: vector_angle.hpp  vector_query.hpp
Engine/include/imgui/plugins/: ImFileBrowser.h
Engine/include/imguizmo/: GraphEditor.cpp  ImCurveEdit.h  ImGradient.cpp  ImSequencer.cpp
Engine/src/: Application.cpp  Application.h  Engine.h  main.cpp  pch.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Assert.h  Base.h  Camera.h  CameraFPS.h  DeltaTime.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Light.h  Log.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlataformDetection.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.h  Vertex.h  Window.cpp  Window.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GLrenderer.cpp  GLrenderer.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Render.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Transform.h  Types.h  UIcontext.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Engine/src/Engine/Utils/: TextureUtil.h  Timer.h  imgui_widgets.h
Engine/src/Engine/ui/: Console.h  Panel.cpp  Panel.h  Scene.cpp  Scene.h
Engine/src/Engine/window/: GLwindow.cpp
Engine/src/Platform/OpenGL/: OpenGLbuffer.cpp  OpenGLbuffer.h  OpenGLcontext.cpp  OpenGLcontext.h  OpenGLrendererAPI.cpp  OpenGLrendererAPI.h  OpenGLvertexArray.cpp  OpenGLvertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sim/Assets/shaders/: model.fs  triangle.fs  triangle.vs
Sim/src/: ApplicationLayer.cpp  ApplicationLayer.h  Boundary.h  Grid.cpp  Grid.h  Object.h  Orbit.h  Planet.cpp  Planet.h  SandBox.cpp  Solver.cpp  Solver.h
include/clases/: Camera.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  classShader.h
include/glad/: glad.h
resources/model/knight/source/: K Sesty JR.fbx
resources/model/sword/: Sting-Sword-lowpoly.mtl  Sword.mtl
shaders/: model.fs  model.vs
src/: Application.cpp  Application.h  common.h  glad.c  main.cpp
src/Core/elements/: Camera.h  CameraFPS.h  Input.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Texture.cpp  Vertex.h
src/Core/renderer/: GLrenderer.cpp  GLrenderer.h  Render.h  UIcontext.cpp  UIcontext.h
src/Core/renderer/Buffers/: FrameBuffer.cpp  FrameBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
src/Core/ui/: Console.h  Panel.cpp  Panel.h  Scene.cpp  Scene.h
src/Core/utils/: Error.h  TextureUtil.h  Timer.h
src/Core/window/: GLwindow.cpp  GLwindow.h
src/Engine/Core/: Base.h  CameraFPS.cpp  Input.h  Layer.h  Log.cpp  Mesh.h  PlataformDetection.h  Texture.cpp
src/Engine/renderer/: GLrenderer.cpp
src/Engine/renderer/Buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Engine/ui/: Panel.cpp  Scene.h
src/Engine/utils/: Error.h  filesystem.h
src/Engine/window/: GLwindow.h  Window.h
src/Sim/: Boundary.h  Grid.cpp  Grid.h  Object.h  Planet.cpp  Planet.h  Solver.cpp  Solver.h  System.cpp  System.h
src/elements/: Camera.cpp  Camera.h  Input.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h
src/renderer/: GLrenderer.h  IndexBuffer.cpp  IndexBuffer.h  Interface.cpp  Interface.h  Render.h  UI_context.h  UIcontext.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  VertexIndexBuffer.cpp  openGLrender.cpp  openGLrender.h
src/renderer/Buffers/: FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  VertexBufferLayout.h
src/ui/: Panel.cpp  Scene.cpp  Scene.h
src/utils/: Timer.h  imgui_widgets.h
src/window/: GLwindow.cpp  GLwindow.h  Window.h
